Fix episode detail url overflowing off page bug

--- a/src/DevPodcasts.Web/Content/Site.css
+++ b/src/DevPodcasts.Web/Content/Site.css
@@ -102,6 +102,10 @@ h6,
     margin-top: 50px;
 }
 
+.episode-detail-container p {
+    word-wrap: break-word
+}
+
 /* Tags */
 
 .tags-container h2 {
